@@ -77,7 +77,7 @@
 
 <addon id="plugin.video.hulu"
        name="Hulu"
-       version="2.8.9"
+       version="2.9.0"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
